add new dashboard ui

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1,222 +1,129 @@
-/* base.css */
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-:root {
-    --background-color: #fff;
-    --accent-background-color: #f1f1f1;
-    --link-color: #181818;
-    --color: #000;
-    --accent-color: #f2f2f2;
-    --border: #dbdbdb;
-}
-/* :root {
-    color-scheme: light dark;
-} */
+  margin: 0;
+  padding: 0; }
 
-@media (prefers-reduced-motion) {
-    * {
-        transition: none;
-    }
-}
-
-body {
-
-    background-color: var(--accent-background-color);
-}
+*,
+::after,
+::before {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 a {
-    display: block;
-    text-decoration: none;
-}
+  text-decoration: none;
+  -webkit-transition: all 0.5s ease-in-out 0s;
+  -o-transition: all 0.5s ease-in-out 0s;
+  transition: all 0.5s ease-in-out 0s; }
+  a:hover {
+    text-decoration: none; }
 
-
-.page-content {
-    margin-left: 250px;
-    position: relative;
-}
-
-/* .card-video {
-    h4 {
-        font-size: 16px;
-        font-weight: bold;
-        color:  var(--color);
-    }
-
-    div {
-        color: var(--link-color);
-        font-size: 13px;
-    }
-
-    &-details {
-        img {
-            border-radius: 50%;
-        }
-    }
-} */
-
-.card-video h4{
-    font-size: 16px;
-    font-weight: bold;
-    color:  var(--color);
-}
-.card-video div{
-    color: var(--link-color);
-    font-size: 13px;
-}
-.card-video-details img{
-    border-radius: 50%;
-}
-
-
-
-
-.text-dark {
-    color: var(--color) !important;
-}
-
-svg path {
-    fill: var(--color);
-}
-
-input.form-control {
-    background-color: var(--accent-background-color) !important;
-    border-color: var(--border) !important;
-    color: var(--color) !important;
-    /* &:focus {
-        box-shadow: none;
-    } */
-}
-
-
-input.form-control:focus {box-shadow: none;}
-
-
-
-.input-group-text {
-    background-color: var(--accent-color) !important;
-    border-color: var(--border) !important;
-}
-
-
-hr {
-    background-color: var(--border) !important;
-}
-
-
-/* nav.css */
-.navigation-bar {
-    position: fixed;
-    width: 100%;
-    z-index: 99;
-    background-color: var(--background-color);
-}
-
-/* sidebar.css */
-.sidebar {
-    width: 250px;
-    position: fixed;
+/*-----------------------------
+	News Ticker
+------------------------------*/
+.acme-news-ticker {
+  background: #fff;
+  position: relative;
+  height: 45px;
+  border: 1px solid #1974d2;
+  margin-top: 45px; }
+  @media (min-width: 768px) {
+    .acme-news-ticker {
+      margin-top: 0; } }
+  .acme-news-ticker-label {
+    background: #1974d2;
+    padding: 10px;
+    width: auto;
+    float: left;
+    margin-right: 15px;
+    line-height: normal;
     height: 100%;
-    left: 0;
-    top: 50px;
-    background-color: var(--background-color);
-    overflow-y: auto;
-    padding-top: 20px;
-    padding-bottom: 40px;
-
-    /* .nav-link span {
-        padding: 0 15px;
-        vertical-align: bottom;
-        white-space: nowrap;
-        font-size: 15px;
-    } */
-
-    /* .nav-footer {
-        padding-right: 30px;
-        padding-left: 1rem;
-        .nav-link {
-            padding: 0;
-            padding-right: 5px;
-            font-size: 12px;
-            font-weight: bold;
-        }
-    } */
-}
-
-.sidebar .nav-link span{
-    padding: 0 15px;
-    vertical-align: bottom;
-    white-space: nowrap;
-    font-size: 15px;
-}
-
-.sidebar .nav-footer{
-    padding-right: 30px;
-    padding-left: 1rem;
-}
-.sidebar .nav-footer .nav-link{
-    padding: 0;
-    padding-right: 5px;
-    font-size: 12px;
-    font-weight: bold;
-}
-
-/* chip.css */
-.chip-container {
-    background-color: var(--background-color);
-    border-top: 1px solid var(--border);
-    border-bottom: 1px solid var(--border);
-    padding: 10px 15px;
-    position: sticky;
-    top: 49px;
-    z-index: 99;
-
-    /* .chip {
+    color: #fff; }
+    @media (max-width: 575px) {
+      .acme-news-ticker-label {
+        position: absolute;
+        top: -45px; } }
+  .acme-news-ticker-box {
+    height: 100%;
+    padding-top: 10px;
+    overflow: hidden; }
+    @media (max-width: 575px) {
+      .acme-news-ticker-box {
+        padding-left: 10px;
+        padding-right: 120px; } }
+    .acme-news-ticker-box ul {
+      width: 100%;
+      list-style-type: none !important;
+      padding: 0;
+      margin: 0; }
+      .acme-news-ticker-box ul li a {
+        text-decoration: none; }
+  .acme-news-ticker-controls {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    height: 100%;
+    right: 0;
+    top: 0; }
+    .acme-news-ticker-controls button {
+      height: 100%;
+      background: #f6f6f6;
+      padding: 0;
+      width: 40px;
+      border-color: #eeeeee;
+      border-style: solid;
+      border-width: 0 0 0 1px;
+      cursor: pointer;
+      display: inline-block; }
+      .acme-news-ticker-controls button:hover {
+        background: #eeeeee; }
+      .acme-news-ticker-controls button.acme-news-ticker-arrow {
+        margin: 0;
         display: inline-block;
-        padding: 5px 10px;
-        font-size: 12px;
-        background-color: var(--accent-color);
-        border: 1px solid var(--border);
-        white-space: nowrap;
-        margin-right: 5px;
-        border-radius: 25px;
-        color: var(--color);
-    } */
+        position: relative; }
+        .acme-news-ticker-controls button.acme-news-ticker-arrow:after {
+          border-color: #999;
+          border-bottom-style: solid;
+          border-bottom-width: 2px;
+          border-right-style: solid;
+          border-right-width: 2px;
+          content: '';
+          display: inline-block;
+          height: 8px;
+          left: 50%;
+          position: absolute;
+          top: 50%;
+          width: 8px; }
+      .acme-news-ticker-controls button.acme-news-ticker-pause {
+        position: relative;
+        display: inline-block; }
+        .acme-news-ticker-controls button.acme-news-ticker-pause:before {
+          position: absolute;
+          content: "";
+          width: 10px;
+          height: 10px;
+          border-color: #999;
+          border-style: solid;
+          border-width: 0 2px 0;
+          -webkit-transform: translate(-50%, -50%);
+              -ms-transform: translate(-50%, -50%);
+                  transform: translate(-50%, -50%);
+          left: 50%;
+          top: 50%; }
+    .acme-news-ticker-controls.acme-news-ticker-horizontal-controls button.acme-news-ticker-prev:after {
+      -webkit-transform: translate(-50%, -50%) rotate(135deg);
+          -ms-transform: translate(-50%, -50%) rotate(135deg);
+              transform: translate(-50%, -50%) rotate(135deg); }
+    .acme-news-ticker-controls.acme-news-ticker-horizontal-controls button.acme-news-ticker-next:after {
+      -webkit-transform: translate(-50%, -50%) rotate(315deg);
+          -ms-transform: translate(-50%, -50%) rotate(315deg);
+              transform: translate(-50%, -50%) rotate(315deg); }
+    .acme-news-ticker-controls.acme-news-ticker-vertical-controls button.acme-news-ticker-prev:after {
+      -webkit-transform: translate(-50%, -50%) rotate(225deg);
+          -ms-transform: translate(-50%, -50%) rotate(225deg);
+              transform: translate(-50%, -50%) rotate(225deg); }
+    .acme-news-ticker-controls.acme-news-ticker-vertical-controls button.acme-news-ticker-next:after {
+      -webkit-transform: translate(-50%, -50%) rotate(405deg);
+          -ms-transform: translate(-50%, -50%) rotate(405deg);
+              transform: translate(-50%, -50%) rotate(405deg); }
 
-    /* .chip.active {
-        background: var(--color);
-        color: var(--background-color);
-    } */
-}
-
-
-
-
-.chip-container .chip{
-    display: inline-block;
-    padding: 5px 10px;
-    font-size: 12px;
-    background-color: var(--accent-color);
-    border: 1px solid var(--border);
-    white-space: nowrap;
-    margin-right: 5px;
-    border-radius: 25px;
-    color: var(--color);
-}
-
-.chip-container .chip.active{
-    background: var(--color);
-    color: var(--background-color);
-
-}
-
-.slick {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    vertical-align: middle;
-    
-}
+/*# sourceMappingURL=style.css.map */
